<resources>
    <string name="app_name">Movie Watcher</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="year_of_release">Year of release</string>
    <string name="genre">Genre</string>
    <string name="favourite_text">Favourite Movie</string>
    <string name="rated_text">High Rated Movies</string>
    <string name="detailed_text">Detailed Movie fragment</string>
    <string name="action_home">Main</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_rated">High Rated</string>
    <string name="error_appstate">Error</string>
    <string name="reload_appstate">Reload</string>
    <string name="popularity">popularity</string>
    <string name="runtime">Runtime</string>
    <string name="originalTitle">Original Title</string>
    <string name="release_date_label">Date: </string>
    <string name="runtime_label">"Runtime:"</string>
    <string name="genre_label">"Genre: "</string>
    <string name="popularity_label">Popularity:</string>
    <string name="setting_text">Choose your option: </string>
    <string name="type_popular">Включать взрослый контент</string>
    <string name="type_top_rated">Не выключать взрослый контент</string>
    <string name="apply">Appy Settings</string>
    <string name="adult">Adult Content</string>
    <string name="off">Выключить взрослый контент</string>
    <string name="on">Включать взрослый контент</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Save</string>
    <string name="poster">Poster</string>
    <string name="movie_note">Movie Note</string>
    <string name="note_description">Note Description</string>
    <string name="action_geo">Geo</string>
    <string name="action_google_map">Google Map</string>
    <string name="text_google_map_search">Москва, Красная площадь 1</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Marker Start</string>
    <string name="country_production">Country</string>
    <string name="dialo_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">"Разрешите доступ к геолокации, если хотите увидеть геолокацию страны "</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Предоставьте доступ, если хотите увидеть локацию</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Отклонить</string>
    <string name="title_dialog_gps_turned_off">GPS выключен</string>
    <string name="dialog_message_last_location_unknown">Location unknown</string>
    <string name="dialog_message_last_location_known">Last known location</string>
    <string name="dialog_address_title">Address</string>
    <string name="dialog_address_get_country_location">Get Country Location</string>
    <string name="address_hint">Type address here</string>
</resources>