<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_main"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/action_home" />

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_action_favourite"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/action_favourite" />

    <item
        android:id="@+id/action_rated"
        android:icon="@drawable/ic_action_rating"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/action_rated" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="5"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history_foreground"
        android:orderInCategory="5"
        android:title="@string/menu_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_geolocation"
        android:icon="@drawable/ic_action_geolocation"
        android:orderInCategory="6"
        android:title="@string/action_geo"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_google_map"
        android:icon="@drawable/ic_action_google_map"
        android:orderInCategory="6"
        android:title="@string/action_google_map"
        app:showAsAction="ifRoom"/>

</menu>