<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/poster_lost_in_translation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:layout_weight="1"
                android:text="@string/title"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewYearOfRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/year_of_release"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewOriginalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_weight="1"
            android:text="@string/originalTitle"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginBottom="@dimen/margin_4_dp"
                android:layout_weight="1"
                android:text="@string/genre"
                android:textSize="@dimen/text_size" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ImageViewPopularity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginBottom="@dimen/margin_4_dp"
                android:src="@drawable/ic_action_rated" />

            <TextView
                android:id="@+id/textViewPopularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/popularity"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/margin_4_dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

